# dyanto-alpha-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: radar.example.json
docs/: PRODUCT_SPEC.md
reports/: sol-demo.json  sol-demo.md
src/dyanto_alpha_radar/: analyzer.py  api.py  cli.py  enrichment.py  report.py  scoring.py
src/dyanto_alpha_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dyanto_alpha_radar/adapters/: dexscreener.py  geckoterminal.py
tests/: test_analyzer_details.py  test_dashboard_ui.py  test_gmgn_style_details.py  test_normalize.py  test_report.py  test_scoring.py
